// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Common Problems Tab render data 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
    style="width: 630px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex"
      style="border-bottom: 0.5px solid #B0B1C4;"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold"
        style="line-height: 22px; display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-blue800"
          data-icon="info"
        >
          <svg
            height="16"
            viewBox="0 0 12 12"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              clip-rule="evenodd"
              d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        delegates.delegateNotInstalled.tabs.commonProblems.hereIsWhatYouCanDo
      </p>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          restart
        </span>
      </button>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 511px;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          delegates.delegateNotInstalled.statusOfCluster
        </p>
        <a
          href="https://ngdocs.harness.io/"
          rel="noreferrer"
          style="text-align: end; font-size: 13px;"
          target="_blank"
        >
          delegates.delegateNotInstalled.tabs.commonProblems.troubleshoot
        </a>
      </div>
      <div
        class="StyledProps--font StyledProps--main podCmndField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          delegates.delegateNotInstalled.podCommand
        </p>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <div
              class=""
              tabindex="0"
            >
              <span
                class="bp3-icon StyledProps--main copyIcon"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 8 9"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.27274 1.40268C7.27274 1.29401 7.20007 1.22201 7.09141 1.22201H3.45337C3.3447 1.22201 3.27203 1.29401 3.27203 1.40268V1.58334C3.27203 1.78201 3.1087 1.94468 2.9087 1.94468C2.70869 1.94468 2.54536 1.78201 2.54536 1.58334V1.22201C2.54536 0.825337 2.8727 0.5 3.2727 0.5H7.27274C7.67341 0.5 8.00008 0.82467 8.00075 1.22134V6.6414C8.00075 7.03873 7.67408 7.3634 7.27341 7.3634H6.18206C5.98273 7.3634 5.81806 7.2014 5.81806 7.00207C5.81806 6.8034 5.98273 6.6414 6.18206 6.6414H7.09141C7.20007 6.6414 7.27274 6.56873 7.27274 6.46073V1.40268ZM0 7.84741V2.95803C0 2.59936 0.33667 2.30602 0.748008 2.30602H4.86205C5.27339 2.30602 5.61072 2.59936 5.61072 2.95803V7.84741C5.61072 8.20675 5.27339 8.50008 4.86205 8.50008H0.748008C0.33667 8.50008 0 8.20675 0 7.84741Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </span>
        </span>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main podCmndVerification"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
      >
        delegates.delegateNotInstalled.podComeUp
      </p>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            yes
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main noBtn Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            no
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Common Problems Tab show event error btn 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
    style="width: 630px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex"
      style="border-bottom: 0.5px solid #B0B1C4;"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold"
        style="line-height: 22px; display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-blue800"
          data-icon="info"
        >
          <svg
            height="16"
            viewBox="0 0 12 12"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              clip-rule="evenodd"
              d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        delegates.delegateNotInstalled.tabs.commonProblems.hereIsWhatYouCanDo
      </p>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          restart
        </span>
      </button>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 511px;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          delegates.delegateNotInstalled.statusOfCluster
        </p>
        <a
          href="https://ngdocs.harness.io/"
          rel="noreferrer"
          style="text-align: end; font-size: 13px;"
          target="_blank"
        >
          delegates.delegateNotInstalled.tabs.commonProblems.troubleshoot
        </a>
      </div>
      <div
        class="StyledProps--font StyledProps--main podCmndField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          delegates.delegateNotInstalled.podCommand
        </p>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <div
              class=""
              tabindex="0"
            >
              <span
                class="bp3-icon StyledProps--main copyIcon"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 8 9"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.27274 1.40268C7.27274 1.29401 7.20007 1.22201 7.09141 1.22201H3.45337C3.3447 1.22201 3.27203 1.29401 3.27203 1.40268V1.58334C3.27203 1.78201 3.1087 1.94468 2.9087 1.94468C2.70869 1.94468 2.54536 1.78201 2.54536 1.58334V1.22201C2.54536 0.825337 2.8727 0.5 3.2727 0.5H7.27274C7.67341 0.5 8.00008 0.82467 8.00075 1.22134V6.6414C8.00075 7.03873 7.67408 7.3634 7.27341 7.3634H6.18206C5.98273 7.3634 5.81806 7.2014 5.81806 7.00207C5.81806 6.8034 5.98273 6.6414 6.18206 6.6414H7.09141C7.20007 6.6414 7.27274 6.56873 7.27274 6.46073V1.40268ZM0 7.84741V2.95803C0 2.59936 0.33667 2.30602 0.748008 2.30602H4.86205C5.27339 2.30602 5.61072 2.59936 5.61072 2.95803V7.84741C5.61072 8.20675 5.27339 8.50008 4.86205 8.50008H0.748008C0.33667 8.50008 0 8.20675 0 7.84741Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </span>
        </span>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 511px;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
      >
        delegates.delegateNotInstalled.eventErrorBlock
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main btnContainer"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main error Button--with-current-color Button--iconOnly Button--withRightIcon"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          delegates.delegateNotInstalled.permissionError
        </span>
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--color StyledProps--color-orange400"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main error addSpacing Button--with-current-color Button--iconOnly Button--withRightIcon"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          delegates.delegateNotInstalled.crashloopError
        </span>
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--color StyledProps--color-orange400"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main error addSpacing Button--with-current-color Button--iconOnly Button--withRightIcon"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          delegates.delegateNotInstalled.pullError
        </span>
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--color StyledProps--color-orange400"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
